--- a/04-css/oblikovanje.css
+++ b/04-css/oblikovanje.css
@@ -18,7 +18,31 @@ body {
     /*  Obojestranska poravnava besedila    */
     text-align: justify;
 }
-
+h1 {
+    color: #330066;
+}
+h2 {
+    margin-top: 2em;
+    border-top-color: #009966;
+    border-top-width: 1px;
+    border-top-style: solid;
+    padding-top: 0.5em;
+}
+#uvod{
+    padding: 2em;
+    background-color: rgb(51, 0, 102, 0.1);
+}
+.slika{
+    font-size: 0.9em;
+    width: 40%;
+    text-align: left;
+    float: right;
+    margin-left: 2em;
+}
+.slika img{
+    width: 100%;
+    height: auto;
+}
 /*  Odstranimo podčrtovanje povezav in outline (ta se včasih pokaže kot kvadratek okrog povezave)  */
 a { text-decoration: none; outline:none; }
 /*  Spremenimo barve povezav: neobiskanih, obiskanih, pod miško in aktivnih */
