--- a/04-css/oblikovanje.css
+++ b/04-css/oblikovanje.css
@@ -38,10 +38,15 @@ h2 {
     text-align: left;
     float: right;
     margin-left: 2em;
+
 }
 .slika img{
     width: 100%;
     height: auto;
+    border-radius: 50%;
+}
+.slika p:last-child{
+    font-size: 0.8em;
 }
 /*  Odstranimo podčrtovanje povezav in outline (ta se včasih pokaže kot kvadratek okrog povezave)  */
 a { text-decoration: none; outline:none; }
