--- a/04-css/oblikovanje.css
+++ b/04-css/oblikovanje.css
@@ -53,7 +53,7 @@ a::before{
     margin: 0em;
     font-size: 0.8em;
 }
-.slika :nth-child(-1){
+.slika :nth-child(n-2){
     padding-top: 0em;
     margin: 0em;   
 }
